# ExclusionParser

./: .gitignore  CMakeLists.txt  DLL_TESTING_REPORT.md  DOTNET_README.md  ExclusionCoverageParser.sln  ExclusionParser.NET.csproj  PROJECT_SUMMARY.md  README.md  VALIDATION_REPORT.md  build-dotnet.bat  build-dotnet.ps1  build_and_test.bat  build_comprehensive.bat  build_dll.bat  build_dll_test.bat  build_dynamic_dll_tests.bat  build_enhanced_dll.bat  build_header_only.bat  build_minimal.bat  build_simple.bat  build_simple_dll_test.bat  build_simple_dynamic_dll_tests.bat  build_static.bat  build_working.bat
examples/: ExclusionParserExample.cs  ExclusionParserExample.vb
exclusion/: N3_GPIO18.el  N3_GPIO33.el  RBBMIF_DLY.el  blpwm_gen.el  dbg_client_wrapper_pwrseq.el  dbg_client_wrapper_rdpcs.el  dcio.el  dcio_chipregs.el  dcio_clk_gen.el  dcio_dlpc_cbus.el  dcio_pwrseq_cbus.el  dcio_wrapper.el  dcioregs.el  dclib.el  dcn_apb_tx_fsm.el  dft_scan_marker_inst.el  dlpc.el  dlpc_bphyc_basecfg.el  dlpc_cbus_slave.el  dlpc_cmd_fifo.el  dlpc_config_if.el  dlpc_core.el  dlpc_ctrl.el  dlpc_dc_phycfg_mstrif.el  dlpc_refclk_antiglitch.el  dlpc_wrapper.el  dlpcregs.el  dpcsc.el  dpcsc_rep_ssb_rep.el  dpcssys_i3c_pad.el  dpcssys_phy_glue.el  dpcssys_usb4_dc_phy_glue.el  dwc_hdmi21_dp_tx_phy_phy_x4_ns.el  dwc_usb4_auxi2c_ns.el  pwrseq.el  pwrseq_bphyc_basecfg.el  pwrseq_cbus_slave.el  pwrseq_clock_gaters.el  pwrseq_cmd_fifo.el  pwrseq_cmd_fifo_internal.el  (+23 more)
include/: ExclusionCInterface.h  ExclusionData.NET.h  ExclusionData.h  ExclusionParser.NET.h  ExclusionParser.h  ExclusionTypes.NET.h  ExclusionTypes.h  ExclusionWriter.h
src/: ExclusionCInterface.cpp  ExclusionData.cpp  ExclusionParser.NET.cpp  ExclusionParser.cpp  ExclusionWriter.cpp
test/: DLLTestFramework.cpp  DLLTestFramework.h  comprehensive_test.cpp  comprehensive_validation_test.cpp  dll_functionality_test.cpp  dynamic_dll_unit_tests.cpp  header_only_test.cpp  minimal_test.cpp  simple_dll_test.cpp  simple_dynamic_dll_tests.cpp  simple_test.cpp  test_data_structures.cpp  test_main.cpp  test_parser.cpp  test_writer.cpp  working_test.cpp
tests/: DotNetAssemblySimulator.cs  DotNetAssemblyTestResults.md  DotNetAssemblyUnitTests.cs  ExclusionParser.NET.Tests.csproj  ExclusionParserTests.NET.cs  test.runsettings
tests/DotNetAssemblyTests/: Program.cs
